language.output
Terminals unused in grammar

    CONST
    PRINT
    RETURN


State 134 conflicts: 1 reduce/reduce
State 137 conflicts: 3 shift/reduce
State 140 conflicts: 1 shift/reduce
State 170 conflicts: 4 reduce/reduce
State 171 conflicts: 2 shift/reduce
State 172 conflicts: 1 shift/reduce
State 200 conflicts: 4 reduce/reduce
State 201 conflicts: 4 reduce/reduce
State 211 conflicts: 2 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: begin $end

    1 data_type: TRIVIAL_TIP
    2          | SIGN_TIP
    3          | TIP_SIGN SIGN_TIP

    4 const_value: INT_VAL
    5            | CHAR_VAL
    6            | STRING_VAL
    7            | BOOL_VAL
    8            | DOUBLE_VAL

    9 variable_idendifier: ID
   10                    | variable_idendifier ',' ID

   11 variable_dec: data_type variable_idendifier ';'
   12             | data_type ID ASSIGN expr ';'

   13 statement: variable_dec
   14          | function_call
   15          | if_statement
   16          | for_statement
   17          | while_statement
   18          | dowhile_statement
   19          | asign_statement
   20          | eval_statement

   21 statement_list: statement
   22               | statement_list statement

   23 ref_val: ID
   24        | ID PMEM ID
   25        | ID '.' ID

   26 caller_params: expr
   27              | expr ',' caller_params

   28 function_call: ID '(' caller_params ')' ';'
   29              | ID '(' ')' ';'

   30 block: '{' statement_list '}'
   31      | statement

   32 asign_statement: ref_val ASSIGN expr ';'
   33                | ref_val MUL_ASSIGN expr ';'
   34                | ref_val MOD_ASSIGN expr ';'
   35                | ref_val ADD_ASSIGN expr ';'
   36                | ref_val MIN_ASSIGN expr ';'
   37                | ref_val DIV_ASSIGN expr ';'

   38 eval_statement: EVAL '(' '"' arhimetic_expr '"' ')' ';'

   39 calc_statement: CALC '(' '"' arhimetic_expr '"' ')' ';'

   40 loop_init: statement
   41          | %empty

   42 stop_cond: lo_operand
   43          | %empty

   44 loop_step: expr
   45          | %empty

   46 condition: '(' lo_operand ')'

   47 for_statement: FOR '(' loop_init ';' stop_cond ';' loop_step ')' block

   48 dowhile_statement: DO block WHILE condition ';'

   49 while_statement: WHILE condition block

   50 if_statement: IF condition block
   51             | IF condition block ELSE block

   52 lo_operand: BOOL_VAL
   53           | lo_expr

   54 lo_expr: NOT lo_operand
   55        | lo_operand AND lo_operand
   56        | lo_operand OR lo_operand
   57        | lo_operand
   58        | '(' lo_expr ')'
   59        | arhimetic_operand GREATER arhimetic_operand
   60        | arhimetic_operand LOWER arhimetic_operand
   61        | arhimetic_operand EQUAL arhimetic_operand
   62        | arhimetic_operand NOT_EQ arhimetic_operand
   63        | arhimetic_operand LOWER_EQ arhimetic_operand
   64        | arhimetic_operand GREATER_EQ arhimetic_operand

   65 numeric_val: ref_val
   66            | function_call
   67            | const_value

   68 arhimetic_operand: numeric_val
   69                  | arhimetic_operand INCR
   70                  | arhimetic_operand DECR
   71                  | INCR arhimetic_operand
   72                  | DECR arhimetic_operand
   73                  | '(' arhimetic_expr ')'

   74 arhimetic_expr: arhimetic_operand
   75               | arhimetic_operand ADD arhimetic_operand
   76               | arhimetic_operand MIN arhimetic_operand
   77               | arhimetic_operand MUL arhimetic_operand
   78               | arhimetic_operand DIV arhimetic_operand
   79               | arhimetic_operand MOD arhimetic_operand

   80 expr: arhimetic_expr
   81     | calc_statement

   82 no_parameter: data_type ID

   83 op_parameter: data_type ID ASSIGN const_value

   84 no_parameter_list: no_parameter
   85                  | no_parameter ',' no_parameter_list

   86 op_parameter_list: op_parameter ',' op_parameter_list
   87                  | no_parameter_list
   88                  | op_parameter

   89 parameter_list: op_parameter_list

   90 function_head: data_type ID '(' parameter_list ')'
   91              | data_type ID '(' ')'

   92 function_dec: function_head ';'

   93 function_def: function_head '{' statement_list '}' ';'

   94 function: function_dec
   95         | function_def

   96 acces_modifier: ACCESMODIF ':'

   97 member_declarations: variable_dec
   98                    | STATIC variable_dec
   99                    | function_dec
  100                    | STATIC function_dec

  101 struct_member: member_declarations
  102              | acces_modifier member_declarations

  103 struct_body: struct_member
  104            | struct_body struct_member

  105 struct_head: ID
  106            | ID '{' struct_body '}'
  107            | ID '{' struct_body '}' variable_idendifier

  108 struct_dec: STRUCT struct_head ';'
  109           | CLASS struct_head ';'

  110 declarations: variable_dec declarations
  111             | struct_dec declarations
  112             | function declarations
  113             | function
  114             | struct_dec
  115             | variable_dec

  116 begin: declarations


Terminals, with rules where they appear

    $end (0) 0
    '"' (34) 38 39
    '(' (40) 28 29 38 39 46 47 58 73 90 91
    ')' (41) 28 29 38 39 46 47 58 73 90 91
    ',' (44) 10 27 85 86
    '.' (46) 25
    ':' (58) 96
    ';' (59) 11 12 28 29 32 33 34 35 36 37 38 39 47 48 92 93 108 109
    '{' (123) 30 93 106 107
    '}' (125) 30 93 106 107
    error (256)
    SIGN_TIP <str> (258) 2 3
    TRIVIAL_TIP <str> (259) 1
    TIP_SIGN (260) 3
    ID <str> (261) 9 10 12 23 24 25 28 29 82 83 90 91 105 106 107
    BOOL_VAL <num> (262) 7 52
    CHAR_VAL <str> (263) 5
    STRING_VAL <str> (264) 6
    INT_VAL <num> (265) 4
    DOUBLE_VAL <rnum> (266) 8
    ASSIGN (267) 12 32 83
    MUL_ASSIGN (268) 33
    MOD_ASSIGN (269) 34
    ADD_ASSIGN (270) 35
    MIN_ASSIGN (271) 36
    DIV_ASSIGN (272) 37
    EQUAL (273) 61
    NOT_EQ (274) 62
    LOWER_EQ (275) 63
    GREATER_EQ (276) 64
    GREATER (277) 59
    LOWER (278) 60
    EVAL (279) 38
    CALC (280) 39
    CONST (281)
    STATIC (282) 98 100
    PRINT (283)
    PMEM (284) 24
    RETURN (285)
    IF (286) 50 51
    ELSE (287) 51
    WHILE (288) 48 49
    DO (289) 48
    FOR (290) 47
    STRUCT (291) 108
    CLASS (292) 109
    ACCESMODIF (293) 96
    OR (294) 56
    AND (295) 55
    NOT (296) 54
    MUL (297) 77
    DIV (298) 78
    MOD (299) 79
    ADD (300) 75
    MIN (301) 76
    INCR (302) 69 71
    DECR (303) 70 72


Nonterminals, with rules where they appear

    $accept (58)
        on left: 0
    data_type (59)
        on left: 1 2 3
        on right: 11 12 82 83 90 91
    const_value <rnum> (60)
        on left: 4 5 6 7 8
        on right: 67 83
    variable_idendifier (61)
        on left: 9 10
        on right: 10 11 107
    variable_dec (62)
        on left: 11 12
        on right: 13 97 98 110 115
    statement (63)
        on left: 13 14 15 16 17 18 19 20
        on right: 21 22 31 40
    statement_list (64)
        on left: 21 22
        on right: 22 30 93
    ref_val <rnum> (65)
        on left: 23 24 25
        on right: 32 33 34 35 36 37 65
    caller_params (66)
        on left: 26 27
        on right: 27 28
    function_call <rnum> (67)
        on left: 28 29
        on right: 14 66
    block (68)
        on left: 30 31
        on right: 47 48 49 50 51
    asign_statement (69)
        on left: 32 33 34 35 36 37
        on right: 19
    eval_statement (70)
        on left: 38
        on right: 20
    calc_statement <rnum> (71)
        on left: 39
        on right: 81
    loop_init (72)
        on left: 40 41
        on right: 47
    stop_cond (73)
        on left: 42 43
        on right: 47
    loop_step (74)
        on left: 44 45
        on right: 47
    condition (75)
        on left: 46
        on right: 48 49 50 51
    for_statement (76)
        on left: 47
        on right: 16
    dowhile_statement (77)
        on left: 48
        on right: 18
    while_statement (78)
        on left: 49
        on right: 17
    if_statement (79)
        on left: 50 51
        on right: 15
    lo_operand <num> (80)
        on left: 52 53
        on right: 42 46 54 55 56 57
    lo_expr <num> (81)
        on left: 54 55 56 57 58 59 60 61 62 63 64
        on right: 53 58
    numeric_val <rnum> (82)
        on left: 65 66 67
        on right: 68
    arhimetic_operand <rnum> (83)
        on left: 68 69 70 71 72 73
        on right: 59 60 61 62 63 64 69 70 71 72 74 75 76 77 78 79
    arhimetic_expr <rnum> (84)
        on left: 74 75 76 77 78 79
        on right: 38 39 73 80
    expr <rnum> (85)
        on left: 80 81
        on right: 12 26 27 32 33 34 35 36 37 44
    no_parameter (86)
        on left: 82
        on right: 84 85
    op_parameter (87)
        on left: 83
        on right: 86 88
    no_parameter_list (88)
        on left: 84 85
        on right: 85 87
    op_parameter_list (89)
        on left: 86 87 88
        on right: 86 89
    parameter_list (90)
        on left: 89
        on right: 90
    function_head (91)
        on left: 90 91
        on right: 92 93
    function_dec (92)
        on left: 92
        on right: 94 99 100
    function_def (93)
        on left: 93
        on right: 95
    function (94)
        on left: 94 95
        on right: 112 113
    acces_modifier (95)
        on left: 96
        on right: 102
    member_declarations (96)
        on left: 97 98 99 100
        on right: 101 102
    struct_member (97)
        on left: 101 102
        on right: 103 104
    struct_body (98)
        on left: 103 104
        on right: 104 106 107
    struct_head (99)
        on left: 105 106 107
        on right: 108 109
    struct_dec (100)
        on left: 108 109
        on right: 111 114
    declarations (101)
        on left: 110 111 112 113 114 115
        on right: 110 111 112 116
    begin (102)
        on left: 116
        on right: 0


State 0

    0 $accept: . begin $end
    1 data_type: . TRIVIAL_TIP
    2          | . SIGN_TIP
    3          | . TIP_SIGN SIGN_TIP
   11 variable_dec: . data_type variable_idendifier ';'
   12             | . data_type ID ASSIGN expr ';'
   90 function_head: . data_type ID '(' parameter_list ')'
   91              | . data_type ID '(' ')'
   92 function_dec: . function_head ';'
   93 function_def: . function_head '{' statement_list '}' ';'
   94 function: . function_dec
   95         | . function_def
  108 struct_dec: . STRUCT struct_head ';'
  109           | . CLASS struct_head ';'
  110 declarations: . variable_dec declarations
  111             | . struct_dec declarations
  112             | . function declarations
  113             | . function
  114             | . struct_dec
  115             | . variable_dec
  116 begin: . declarations

    SIGN_TIP     shift, and go to state 1
    TRIVIAL_TIP  shift, and go to state 2
    TIP_SIGN     shift, and go to state 3
    STRUCT       shift, and go to state 4
    CLASS        shift, and go to state 5

    data_type      go to state 6
    variable_dec   go to state 7
    function_head  go to state 8
    function_dec   go to state 9
    function_def   go to state 10
    function       go to state 11
    struct_dec     go to state 12
    declarations   go to state 13
    begin          go to state 14


State 1

    2 data_type: SIGN_TIP .

    $default  reduce using rule 2 (data_type)


State 2

    1 data_type: TRIVIAL_TIP .

    $default  reduce using rule 1 (data_type)


State 3

    3 data_type: TIP_SIGN . SIGN_TIP

    SIGN_TIP  shift, and go to state 15


State 4

  105 struct_head: . ID
  106            | . ID '{' struct_body '}'
  107            | . ID '{' struct_body '}' variable_idendifier
  108 struct_dec: STRUCT . struct_head ';'

    ID  shift, and go to state 16

    struct_head  go to state 17


State 5

  105 struct_head: . ID
  106            | . ID '{' struct_body '}'
  107            | . ID '{' struct_body '}' variable_idendifier
  109 struct_dec: CLASS . struct_head ';'

    ID  shift, and go to state 16

    struct_head  go to state 18


State 6

    9 variable_idendifier: . ID
   10                    | . variable_idendifier ',' ID
   11 variable_dec: data_type . variable_idendifier ';'
   12             | data_type . ID ASSIGN expr ';'
   90 function_head: data_type . ID '(' parameter_list ')'
   91              | data_type . ID '(' ')'

    ID  shift, and go to state 19

    variable_idendifier  go to state 20


State 7

    1 data_type: . TRIVIAL_TIP
    2          | . SIGN_TIP
    3          | . TIP_SIGN SIGN_TIP
   11 variable_dec: . data_type variable_idendifier ';'
   12             | . data_type ID ASSIGN expr ';'
   90 function_head: . data_type ID '(' parameter_list ')'
   91              | . data_type ID '(' ')'
   92 function_dec: . function_head ';'
   93 function_def: . function_head '{' statement_list '}' ';'
   94 function: . function_dec
   95         | . function_def
  108 struct_dec: . STRUCT struct_head ';'
  109           | . CLASS struct_head ';'
  110 declarations: . variable_dec declarations
  110             | variable_dec . declarations
  111             | . struct_dec declarations
  112             | . function declarations
  113             | . function
  114             | . struct_dec
  115             | . variable_dec
  115             | variable_dec .  [$end]

    SIGN_TIP     shift, and go to state 1
    TRIVIAL_TIP  shift, and go to state 2
    TIP_SIGN     shift, and go to state 3
    STRUCT       shift, and go to state 4
    CLASS        shift, and go to state 5

    $default  reduce using rule 115 (declarations)

    data_type      go to state 6
    variable_dec   go to state 7
    function_head  go to state 8
    function_dec   go to state 9
    function_def   go to state 10
    function       go to state 11
    struct_dec     go to state 12
    declarations   go to state 21


State 8

   92 function_dec: function_head . ';'
   93 function_def: function_head . '{' statement_list '}' ';'

    ';'  shift, and go to state 22
    '{'  shift, and go to state 23


State 9

   94 function: function_dec .

    $default  reduce using rule 94 (function)


State 10

   95 function: function_def .

    $default  reduce using rule 95 (function)


State 11

    1 data_type: . TRIVIAL_TIP
    2          | . SIGN_TIP
    3          | . TIP_SIGN SIGN_TIP
   11 variable_dec: . data_type variable_idendifier ';'
   12             | . data_type ID ASSIGN expr ';'
   90 function_head: . data_type ID '(' parameter_list ')'
   91              | . data_type ID '(' ')'
   92 function_dec: . function_head ';'
   93 function_def: . function_head '{' statement_list '}' ';'
   94 function: . function_dec
   95         | . function_def
  108 struct_dec: . STRUCT struct_head ';'
  109           | . CLASS struct_head ';'
  110 declarations: . variable_dec declarations
  111             | . struct_dec declarations
  112             | . function declarations
  112             | function . declarations
  113             | . function
  113             | function .  [$end]
  114             | . struct_dec
  115             | . variable_dec

    SIGN_TIP     shift, and go to state 1
    TRIVIAL_TIP  shift, and go to state 2
    TIP_SIGN     shift, and go to state 3
    STRUCT       shift, and go to state 4
    CLASS        shift, and go to state 5

    $default  reduce using rule 113 (declarations)

    data_type      go to state 6
    variable_dec   go to state 7
    function_head  go to state 8
    function_dec   go to state 9
    function_def   go to state 10
    function       go to state 11
    struct_dec     go to state 12
    declarations   go to state 24


State 12

    1 data_type: . TRIVIAL_TIP
    2          | . SIGN_TIP
    3          | . TIP_SIGN SIGN_TIP
   11 variable_dec: . data_type variable_idendifier ';'
   12             | . data_type ID ASSIGN expr ';'
   90 function_head: . data_type ID '(' parameter_list ')'
   91              | . data_type ID '(' ')'
   92 function_dec: . function_head ';'
   93 function_def: . function_head '{' statement_list '}' ';'
   94 function: . function_dec
   95         | . function_def
  108 struct_dec: . STRUCT struct_head ';'
  109           | . CLASS struct_head ';'
  110 declarations: . variable_dec declarations
  111             | . struct_dec declarations
  111             | struct_dec . declarations
  112             | . function declarations
  113             | . function
  114             | . struct_dec
  114             | struct_dec .  [$end]
  115             | . variable_dec

    SIGN_TIP     shift, and go to state 1
    TRIVIAL_TIP  shift, and go to state 2
    TIP_SIGN     shift, and go to state 3
    STRUCT       shift, and go to state 4
    CLASS        shift, and go to state 5

    $default  reduce using rule 114 (declarations)

    data_type      go to state 6
    variable_dec   go to state 7
    function_head  go to state 8
    function_dec   go to state 9
    function_def   go to state 10
    function       go to state 11
    struct_dec     go to state 12
    declarations   go to state 25


State 13

  116 begin: declarations .

    $default  reduce using rule 116 (begin)


State 14

    0 $accept: begin . $end

    $end  shift, and go to state 26


State 15

    3 data_type: TIP_SIGN SIGN_TIP .

    $default  reduce using rule 3 (data_type)


State 16

  105 struct_head: ID .  [';']
  106            | ID . '{' struct_body '}'
  107            | ID . '{' struct_body '}' variable_idendifier

    '{'  shift, and go to state 27

    $default  reduce using rule 105 (struct_head)


State 17

  108 struct_dec: STRUCT struct_head . ';'

    ';'  shift, and go to state 28


State 18

  109 struct_dec: CLASS struct_head . ';'

    ';'  shift, and go to state 29


State 19

    9 variable_idendifier: ID .  [',', ';']
   12 variable_dec: data_type ID . ASSIGN expr ';'
   90 function_head: data_type ID . '(' parameter_list ')'
   91              | data_type ID . '(' ')'

    ASSIGN  shift, and go to state 30
    '('     shift, and go to state 31

    $default  reduce using rule 9 (variable_idendifier)


State 20

   10 variable_idendifier: variable_idendifier . ',' ID
   11 variable_dec: data_type variable_idendifier . ';'

    ','  shift, and go to state 32
    ';'  shift, and go to state 33


State 21

  110 declarations: variable_dec declarations .

    $default  reduce using rule 110 (declarations)


State 22

   92 function_dec: function_head ';' .

    $default  reduce using rule 92 (function_dec)


State 23

    1 data_type: . TRIVIAL_TIP
    2          | . SIGN_TIP
    3          | . TIP_SIGN SIGN_TIP
   11 variable_dec: . data_type variable_idendifier ';'
   12             | . data_type ID ASSIGN expr ';'
   13 statement: . variable_dec
   14          | . function_call
   15          | . if_statement
   16          | . for_statement
   17          | . while_statement
   18          | . dowhile_statement
   19          | . asign_statement
   20          | . eval_statement
   21 statement_list: . statement
   22               | . statement_list statement
   23 ref_val: . ID
   24        | . ID PMEM ID
   25        | . ID '.' ID
   28 function_call: . ID '(' caller_params ')' ';'
   29              | . ID '(' ')' ';'
   32 asign_statement: . ref_val ASSIGN expr ';'
   33                | . ref_val MUL_ASSIGN expr ';'
   34                | . ref_val MOD_ASSIGN expr ';'
   35                | . ref_val ADD_ASSIGN expr ';'
   36                | . ref_val MIN_ASSIGN expr ';'
   37                | . ref_val DIV_ASSIGN expr ';'
   38 eval_statement: . EVAL '(' '"' arhimetic_expr '"' ')' ';'
   47 for_statement: . FOR '(' loop_init ';' stop_cond ';' loop_step ')' block
   48 dowhile_statement: . DO block WHILE condition ';'
   49 while_statement: . WHILE condition block
   50 if_statement: . IF condition block
   51             | . IF condition block ELSE block
   93 function_def: function_head '{' . statement_list '}' ';'

    SIGN_TIP     shift, and go to state 1
    TRIVIAL_TIP  shift, and go to state 2
    TIP_SIGN     shift, and go to state 3
    ID           shift, and go to state 34
    EVAL         shift, and go to state 35
    IF           shift, and go to state 36
    WHILE        shift, and go to state 37
    DO           shift, and go to state 38
    FOR          shift, and go to state 39

    data_type          go to state 40
    variable_dec       go to state 41
    statement          go to state 42
    statement_list     go to state 43
    ref_val            go to state 44
    function_call      go to state 45
    asign_statement    go to state 46
    eval_statement     go to state 47
    for_statement      go to state 48
    dowhile_statement  go to state 49
    while_statement    go to state 50
    if_statement       go to state 51


State 24

  112 declarations: function declarations .

    $default  reduce using rule 112 (declarations)


State 25

  111 declarations: struct_dec declarations .

    $default  reduce using rule 111 (declarations)


State 26

    0 $accept: begin $end .

    $default  accept


State 27

    1 data_type: . TRIVIAL_TIP
    2          | . SIGN_TIP
    3          | . TIP_SIGN SIGN_TIP
   11 variable_dec: . data_type variable_idendifier ';'
   12             | . data_type ID ASSIGN expr ';'
   90 function_head: . data_type ID '(' parameter_list ')'
   91              | . data_type ID '(' ')'
   92 function_dec: . function_head ';'
   96 acces_modifier: . ACCESMODIF ':'
   97 member_declarations: . variable_dec
   98                    | . STATIC variable_dec
   99                    | . function_dec
  100                    | . STATIC function_dec
  101 struct_member: . member_declarations
  102              | . acces_modifier member_declarations
  103 struct_body: . struct_member
  104            | . struct_body struct_member
  106 struct_head: ID '{' . struct_body '}'
  107            | ID '{' . struct_body '}' variable_idendifier

    SIGN_TIP     shift, and go to state 1
    TRIVIAL_TIP  shift, and go to state 2
    TIP_SIGN     shift, and go to state 3
    STATIC       shift, and go to state 52
    ACCESMODIF   shift, and go to state 53

    data_type            go to state 6
    variable_dec         go to state 54
    function_head        go to state 55
    function_dec         go to state 56
    acces_modifier       go to state 57
    member_declarations  go to state 58
    struct_member        go to state 59
    struct_body          go to state 60


State 28

  108 struct_dec: STRUCT struct_head ';' .

    $default  reduce using rule 108 (struct_dec)


State 29

  109 struct_dec: CLASS struct_head ';' .

    $default  reduce using rule 109 (struct_dec)


State 30
